[gd_scene load_steps=3 format=3 uid="uid://projectile"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_rk1ec"]

[node name="Projectile" type="Area2D"]
script = ExtResource("1_rk1ec")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = RectangleShape2D { size = Vector2(8, 4) }

[node name="Body" type="ColorRect" parent="."]
color = Color(1, 1, 1, 0.8)
anchor_right = 0.5
anchor_bottom = 0.5
size = Vector2(8, 4)

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true
wait_time = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
